--- a/1.html
+++ b/1.html
@@ -19,6 +19,27 @@
         <p style="margin-top:40px;">대한민국의 1세대 인터넷 방송인 중 한 명으로 휴식기를 제외하고 2007년부터 현재까지 활동하고 있는 몇 안 되는 인터넷 방송인이다.
         2007년, 아프리카TV를 통해 데뷔했으며 이후 다음 tv팟, 트위치 등으로 이적하여 활동을 이어가다 현재는 치지직을 중심으로 방송을 이어가고 있다.
         비디오 게임과 시청자들과의 일상 생활 잡담을 주력 콘텐츠로 한다.</p>
+        <p>
+            <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://kane8.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+        </p>
     </body>
 </html>
  
