--- a/mte.html
+++ b/mte.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  <!--본문에 대한 설명-->
-        <title>최진우</title>
+        <title>뭉탱이</title>
         <meta charset="utf-8">
     </head>
 
@@ -13,6 +13,9 @@
             <li><a href="ununun.html">케경호</a></li>
         </ol>
         <strong><h2><a href="https://www.youtube.com/watch?v=92volEdYcCQ" target="_blank" title="뭉탱이 영상">뭉탱이</a></h2></strong>      <!--제목-->
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/92volEdYcCQ?si=TT2Cd3JlxwQPZVKz" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </p>
         <p>뭉텅이의 방언이자 인터넷 방송인 케인의 밈.</p>
         <p>케인이 과거 동인천역 앞 버스정류장에서 사람들이 모여있을 때 갑자기 버스를 타러 나타나 독특한 움직임으로 
         새치기를 하는 친구의 모습을 묘사하면서 사람들이 몰려있는 모습을 뭉탱이로 있다고 표현한 것으로, 
