--- a/sorry.html
+++ b/sorry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  <!--본문에 대한 설명-->
-        <title>최진우</title>
+        <title>죄송합니다</title>
         <meta charset="utf-8">
     </head>
 
@@ -13,6 +13,11 @@
             <li><a href="ununun.html">케경호</a></li>
         </ol>
         <h2><strong><a href="https://www.youtube.com/watch?v=GLwDtB-1Ya8" target="_blank" title="죄송합니다 영상">죄송합니다</a></strong></h2>      <!--제목-->
+        <p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/GLwDtB-1Ya8?si=dKzSU_0kL-K3QmD6" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
+            web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </p>
         <p>죄송합니다 밈의 시작은 개요에서 말한 연애사 개입사건으로, 지금에서야 밈으로 발전되었기는 했지만 죄송합니다
              영상이 나오기까지의 과정은 매우 험악하기 짝이 없었다. 중립을 고수한답시고 우희쪽의 편을 들어주다 샌드백의 카카오톡으로 케인이 덩달아 욕을 먹고, 
              후술할 후원정지 정리좀하고 4시쯤 장면으로 알려진 해명 방송에서 웃는 모습까지 보여줘 민심이 난리가 났다. 
