--- a/ununun.html
+++ b/ununun.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>  <!--본문에 대한 설명-->
-        <title>최진우</title>
+        <title>케경호</title>
         <meta charset="utf-8">
     </head>
 
